--- a/mineXplorer/src/styles.scss
+++ b/mineXplorer/src/styles.scss
@@ -46,6 +46,12 @@ input {
       opacity: 0.7 !important;
     }
 }
+small {
+  color: var(--theme-color)
+}
+.hide {
+  display: none;
+}
 
 button {
   width: 100%;
@@ -56,15 +62,24 @@ button {
   white-space: nowrap;
   user-select: none;
   image-rendering: pixelated;
-  border: 2px solid #000;
+  //border: 2px solid #000;
   box-shadow: 3px 3px 0px 0px var(--quartiary-color);
   margin: 0px 5px;
+  background-color: var(--tertiary-color);
+  color: var(--primary-color);
 
   /* Mouse over */
-  &:hover .title {
-    background-color: var(--theme-color);
+  &:hover {
+    //background-color: var(--quartiary-color);
+    opacity: 0.7;
     text-shadow: 2px 2px #202013CC;
-    color: var(--theme-color);
+    color: var(--primary-color);
+  }
+  &:disabled {
+    //background-color: var(--quartiary-color);
+    opacity: 0.2;
+    text-shadow: 2px 2px #202013CC;
+    color: var(--primary-color);
   }
 
   &:active .title {
